chore: remove use of teamsykmelding.syfo-nl-request
