# src/main/resources/openapi/documentation.yaml
@@ -107,22 +107,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/HttpMessage"
-  /api/narmesteleder/request:
-    post:
-      description: ""
-      requestBody:
-        content:
-          '*/*':
-            schema:
-              $ref: "#/components/schemas/NlRequestDTO"
-        required: true
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/HttpMessage"
   /api/oppgave/list:
     post:
       description: ""
